--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-server.port=8080
+server.port=2333
+
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=ptgl
+#spring.datasource.password=ptgl123
+spring.datasource.url=jdbc:oracle:thin:@10.81.69.67:1521:orcl
+spring.datasource.username=ptgl
+spring.datasource.password=gxjh123
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
