--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>wqr</groupId>
-    <artifactId>lp-springboot-jwt</artifactId>
+    <groupId>gxjh</groupId>
+    <artifactId>gxjh-spring</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencyManagement>
@@ -107,6 +107,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -135,7 +136,7 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -149,11 +150,16 @@
             <version>11.2.0.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -169,7 +175,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.0.3.RELEASE</version>
                 <configuration>
-                    <mainClass>com.cn.shcd.gxjh.LpAccountApplication</mainClass>
+                    <mainClass>com.cn.shcd.gxjh.controller.LpAccountApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -181,6 +187,7 @@
             </plugin>
 
         </plugins>
+
     </build>
 
 
