--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.0.3.RELEASE</version>
                 <configuration>
-                    <mainClass>com.cn.shcd.gxjh.controller.LpAccountApplication</mainClass>
+                    <mainClass>com.shcd.GxjhApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
