--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
     </dependencies>
 
     <build>
